--- a/src/app/components/autentificacion/registro/registro.component.html
+++ b/src/app/components/autentificacion/registro/registro.component.html
@@ -29,5 +29,6 @@
             <hr>
             <button type="submit" class="btn btn-primary" [disabled]="!registroForm.valid">Registrar</button>
         </form>
+        <p>Si ya dispone de cuenta pulse <a routerLink="/iniciosesion">aquí</a></p>
     </div>
 </div>
